--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
       <div class="header-left">
         <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        <img src="./Untitled Diagram.drawio.png" alt="API">
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
