--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <div class="header-left">
+    <p>zoom API</p>
         <img class="api" src="./Untitled Diagram.drawio.png" alt="API">
-      </div>
-    </div>
   </header>
 </body>
 </html>
